
- Fixed a problem in the text offset to screen line conversion. It
  usually manifested itself in the form of the "disappearing selection"
  bug; if only part of the first line was visible due to scrolling and a
  selection began in the part that was not visible, painting the
  selection would throw an exception which would result in the selection
  extension being removed from the text area.

}}}
{{{ API Changes

- TokenHandler.handleToken() method now takes a Segment instance as
  the first parameter.

- Direct construction of SearchDialog no longer possible due to internal
  changes. The SearchDialog.showSearchDialog() method that has been
  recommended since jEdit 4.0 still works.

- Buffer.setReadOnly() can be used to make a buffer read only even if
  the file is writable on disk.

}}}

}}}

{{{ Version 4.2pre2

Thanks to Carmine Lucarelli, Matt Albrecht, Ollie Rutherfurd and
Sebastien Pierre for contributing to this release.

{{{ Editing

- "Complete Word" now inserts the longest common prefix if there is more
  than one possible completion (the popup is still displayed as well).

- Added Ignore Case (C+e C+i) and Regular Expressions (C+e C+x) commands
  to Search menu for changing search bar settings from the keyboard.

- Incremental Search Bar and HyperSearch Bar commands now always
  disregard the selection. Use Incremental Search for Word and
  HyperSearch for Word commands if you want to search for the selected
  text.

- Made behavior of auto indent caused by "Insert Tab and Indent",
  "Insert Enter and Indent", and "Indent Selected Lines" commands is
  more consistent.

- Register commands now list registers, and marker commands now list
  markers with shortcuts in the status bar.

- Added Edit->More Clipboard->Paste Deleted (C+e C+y) command. Similar
  to Paste Previous, it lists recently deleted strings.

- Quick copy now works between text areas.

- Paste Previous dialog box now supports multiple selection.

}}}
{{{ File System Browser
