@@ -38,6 +38,7 @@
 
 		<!-- comments -->
 		<EOL_SPAN_REGEXP AT_WHITESPACE_END="TRUE" HASH_CHAR="R" TYPE="COMMENT1">REM\s</EOL_SPAN_REGEXP>
+		<EOL_SPAN AT_WHITESPACE_END="TRUE" TYPE="COMMENT1">::</EOL_SPAN>
 
 		<!-- literals -->
 		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
