@@ -1004,6 +1004,24 @@ public class GUIUtilities
 		}
 	} //}}}
 
+	//{{{ centerOnScreen() method
+	/**
+	 * Centers the given window on the screen. This method is needed because
+	 * JDK 1.3 does not have a <code>JWindow.setLocationRelativeTo()</code>
+	 * method.
+	 * @since jEdit 4.2pre3
+	 */
+	public static void centerOnScreen(Window win)
+	{
+		GraphicsDevice gd = GraphicsEnvironment
+			.getLocalGraphicsEnvironment()
+			.getDefaultScreenDevice();
+		Rectangle gcbounds = gd.getDefaultConfiguration().getBounds();
+		int x = gcbounds.x + (gcbounds.width - win.getWidth()) / 2;
+		int y = gcbounds.y + (gcbounds.height - win.getHeight()) / 2;
+		win.setLocation(x,y);
+	} //}}}
+
 	//}}}
 
 	//{{{ hideSplashScreen() method
